--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "class-validator": "^0.14.1",
     "prisma": "^5.20.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "bcrypt": "^5.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
