--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prisma": "^5.20.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "@nestjs/swagger": "^7.4.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
